--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,7 +104,7 @@ services:
       - timescaledb
 
   demo-data-service:
-    build: ../demo-data-service
+    build: ./demo-data-service
     container_name: demo-data-service
     ports:
       - "8090:8090"
@@ -115,7 +115,7 @@ services:
     restart: unless-stopped
 
   etl-workers:
-    build: ../etl-workers
+    build: ./etl-workers
     container_name: etl-workers
     environment:
       DATABASE_URL: postgres://aquaflow:changeme@timescaledb:5432/aquaflowdb?sslmode=disable&search_path=aquaflow
