--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.1.2",
+    "@primevue/core": "^4.3.5",
     "@primevue/themes": "^4.3.5",
     "axios": "^1.6.0",
     "date-fns": "^3.0.0",
@@ -19,10 +21,12 @@
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.3.5",
     "@vitejs/plugin-vue": "^5.0.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
+    "unplugin-vue-components": "^28.7.0",
     "vite": "^5.0.0",
     "vitest": "^1.0.0"
   }
